<resources>
    <string name="app_name">Locker</string>
    <string name="introduction">Welcome to locker!</string>
    <string name="introduction_message">This is a password manager. You can store and access your password easily.</string>
    <string name="remember_password">You need to setup a master password, which you\'ll use to access and store your passwords.</string>
    <string name="master_password">Master password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="finish">Finish</string>
    <string name="setup">Setup</string>
    <string name="search_accounts">Search accounts</string>
    <string name="add_account_button">Add account button</string>
    <string name="locker_app_icon">Locker app icon</string>
    <string name="no_accounts_message">You have no accounts. Tap the \'+\' button to add.</string>
    <string name="add_account">Add account</string>
    <string name="service_name">Service name</string>
    <string name="identity">Identity</string>
    <string name="password">Password</string>
    <string name="continue_string">Continue</string>
    <string name="enter_master_password">Enter master password</string>
    <string name="cancel">Cancel</string>
    <string name="view_account">View account</string>
    <string name="update">Update</string>
    <string name="export_database">Export database</string>
    <string name="import_database">Import database</string>
    <string name="licenses">Licenses</string>
    <string name="search_for_accounts">Search for accounts</string>
    <string name="password_too_short">Password length too short.</string>
    <string name="password_too_long">Password length too long.</string>
    <string name="password_incorrect">Password is incorrect. Try again.</string>
    <string name="passwords_do_not_match">Passwords do not match.</string>
    <string name="delete_account">Delete account</string>
    <string name="reset">Reset</string>
    <string name="search_your_accounts">Type to search your accounts…</string>
    <string name="no_account_found">No accounts found.</string>
    <string name="save_file_error">Error while saving file.</string>
    <string name="database_password">Database password</string>
    <string name="current_password">Current password</string>
    <string name="overwrite_database">Overwrite database</string>
    <string name="overwrite_database_prompt">Do you want to overwrite the database?</string>
    <string name="invalid_database">Database is invalid and cannot be imported.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>