<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"

        android:gravity="bottom|center_horizontal"
        android:paddingHorizontal="24dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/app_icon_large"

            android:layout_width="200dp"
            android:layout_height="200dp"

            android:contentDescription="@string/locker_app_icon"
            android:src="@drawable/locker_app_icon_large"

            app:srcCompat="@drawable/locker_app_icon_large"

            android:layout_marginBottom="48dp"/>

        <TextView
            android:id="@+id/introduction_title"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/introduction"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"

            android:layout_marginBottom="48dp" />

        <TextView
            android:id="@+id/introduction_message"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/introduction_message"
            android:textAlignment="center"
            android:textSize="16sp"

            android:layout_marginBottom="64dp" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/to_setup"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/setup"

        android:layout_marginBottom="48dp"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>