<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"

    android:paddingHorizontal="20dp"
    android:paddingVertical="28dp"

    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:textSize="20sp"
        android:text="@string/enter_master_password"
        android:layout_marginStart="10dp"/>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        app:endIconMode="password_toggle"

        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/master_password_prompt_password_input"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/master_password" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/master_password_prompt_cancel"

            style="@style/Widget.Material3.Button.TextButton.Dialog.Flush"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/cancel"

            android:layout_marginEnd="10dp"
            android:layout_gravity="end"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/master_password_prompt_continue"

            style="@style/Widget.Material3.Button.TextButton.Dialog.Flush"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/continue_string" />

    </LinearLayout>

</LinearLayout>