<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="?android:colorBackground"

    android:orientation="vertical"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="7dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/close_edit_account_dialog_button"

            style="@style/Widget.Material3.Button.IconButton"

            android:layout_centerVertical="true"

            app:iconSize="28sp"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:icon="@drawable/round_close_24"/>

        <TextView
            android:id="@+id/view_account_text"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"

            android:layout_centerVertical="true"

            android:text="@string/view_account"
            android:textSize="20sp"

            android:layout_toEndOf="@id/close_edit_account_dialog_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/reset_account_dialog_button"
            style="@style/Widget.Material3.Button.TextButton"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"

            android:text="@string/reset"
            android:enabled="false"

            android:layout_alignParentEnd="true"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:orientation="vertical"

        android:gravity="center_vertical"
        android:layout_weight="1">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_account_service_name_input"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/service_name" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_account_identity_input"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/identity" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:endIconMode="password_toggle"

            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_account_password_input"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:inputType="textPassword"

                android:hint="@string/password" />

        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.Material3.Button.OutlinedButton"

                android:id="@+id/update_account_dialog_button"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/update"

                android:layout_marginEnd="15dp"
                android:enabled="false" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/delete_account_dialog_button"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_toEndOf="@id/update_account_dialog_button"

                android:text="@string/delete_account" />

        </RelativeLayout>
    </LinearLayout>
</LinearLayout>