<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"

        android:paddingHorizontal="24dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/remember_password"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/remember_password"

            android:textAlignment="center"
            android:textSize="16sp"
            android:layout_marginBottom="48dp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

            android:id="@+id/master_password_layout"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/master_password"

            app:endIconMode="password_toggle"
            android:layout_marginBottom="16dp" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/master_password"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"

            android:id="@+id/master_password_confirm_layout"

            android:layout_width="match_parent"
            android:layout_height="61dp"

            android:hint="@string/confirm_password"

            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirm_master_password"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/finish_setup"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/finish"

        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="48dp"/>
</LinearLayout>