<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/search_bar_layout"

        android:layout_width="match_parent"
        android:layout_height="0dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.search.SearchBar
            android:id="@+id/search_bar"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/search_accounts">

        </com.google.android.material.search.SearchBar>
    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.search.SearchView
        android:id="@+id/search_view"

        android:layout_width="match_parent"
        android:layout_height="0dp"

        app:layout_anchor="@id/search_bar_layout"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/search_view_recycler"

            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:paddingTop="10dp"
            android:paddingBottom="10dp"/>
        <TextView
            android:id="@+id/search_prompt_text"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:text="@string/search_your_accounts"
            android:textSize="16sp"

            android:layout_marginHorizontal="24dp"/>

    </com.google.android.material.search.SearchView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/accounts_view"

        android:layout_width="0dp"
        android:layout_height="0dp"

        android:requiresFadingEdge="vertical"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_bar_layout"

        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_account_button"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:srcCompat="@drawable/round_add_24"

        android:clickable="true"
        android:focusable="true"

        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"

        android:contentDescription="@string/add_account_button"/>

    <TextView
        android:id="@+id/no_accounts_message"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/no_accounts_message"
        android:fontFamily="@font/poppins"

        android:visibility="gone"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_bar_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>