<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?android:colorBackground"

    android:orientation="vertical"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="7dp">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/close_add_account_dialog_button"

            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_centerVertical="true"

            app:iconSize="28sp"
            app:icon="@drawable/round_close_24"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_account"
            android:fontFamily="@font/poppins"

            android:layout_toRightOf="@id/close_add_account_dialog_button"
            android:layout_centerVertical="true"

            android:textSize="20sp"
            android:includeFontPadding="false" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:layout_weight="1">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_account_service_name_input"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:fontFamily="@font/poppins"
                android:hint="@string/service_name"
                android:includeFontPadding="false" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_account_identity_input"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:fontFamily="@font/poppins"
                android:hint="@string/identity"
                android:includeFontPadding="false" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:endIconMode="password_toggle"

            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_account_password_input"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:inputType="textPassword"

                android:fontFamily="@font/poppins"
                android:hint="@string/password"
                android:includeFontPadding="false" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_account_add_account_button"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:fontFamily="@font/poppins"
            android:includeFontPadding="false"
            android:text="@string/add_account"
            android:layout_gravity="center"/>
    </LinearLayout>
</LinearLayout>

